<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_no_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F2F2F2"
        android:padding="@dimen/dp15"
        android:paddingBottom="@dimen/dp9"
        android:paddingTop="9dp"
        android:text="@string/friend_video_play_tip" />

    <LinearLayout
        android:id="@+id/layout_play_wifi"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp15"
        android:paddingRight="@dimen/dp15"
        android:layout_height="@dimen/dp50">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/common_white"
            android:text="@string/friend_video_play_wifi"
            />
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/iv_play_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_player_press"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_play_4g_wifi"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp15"
        android:paddingRight="@dimen/dp15"
        android:layout_height="@dimen/dp50">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/common_white"
            android:text="@string/friend_video_play_wifi_4g"
            />
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/iv_play_4g_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_player_press"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_play_close"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp15"
        android:paddingRight="@dimen/dp15"
        android:layout_height="@dimen/dp50">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/common_white"
            android:text="@string/friend_video_play_close"
            />
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/iv_play_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_player_press"/>

    </LinearLayout>

</LinearLayout>